yaml k8s completion with coc for yml extension

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -2,6 +2,6 @@
     // YAML
     "yaml.enable": true,
     "yaml.schemas": {
-        "kubernetes": "/*.yaml"
+        "kubernetes": ["/*.yml", "/*.yaml"]
     }
 }
